Beta sample_04/05 analyses. Implemented biomart archive download.

--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
-# User-custom
+# hybkit-specific
+
 *test*
-# *.tar
-# *.gz
 *.hyb
 *.vienna
 *.viennad
 *.ct
-# GSM27200*
 */output
 *.swp
+working*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
