--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
 # hybkit-specific
-
 *test*
 *.hyb
 *.vienna
@@ -8,6 +7,7 @@
 */output
 *.swp
 working*
+private*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
