--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ python:
 
 install:
   - pip install -r requirements.txt
+  - python setup.py install
   - export PATH=$PATH:$PWD/scripts
 
 script:
