--- a/.travis.yml
+++ b/.travis.yml
@@ -30,5 +30,6 @@ install:
 script:
   - cd auto_tests
   - ./auto_test.sh
-  - coverage run --source=../ -m pytest
+  - cd ../
+  - coverage run --source=. -m pytest
   - coveralls
