--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
   - "3.8"
   - "3.9"
   - "3.9-dev"  # 3.9 development branch
+  - "3.10"
+  - "3.10-dev"  # 3.9 development branch
 # install:
   # command to run tests
 #os:
