--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: python
 python:
-  - "3.7"
   - "3.8"
   - "3.9"
   - "3.9-dev"  # 3.9 development branch
-  # - "3.10"
+  - "3.10"
   - "3.10-dev"  # 3.9 development branch
 # install:
   # command to run tests
@@ -19,10 +18,10 @@ python:
 #  only:
 #  - master
 
-jobs:
-  allow_failures:
-  - python:
-     "3.10-dev" # Fails due to lack of matplotlib availability
+#jobs:
+#  allow_failures:
+#  - python:
+#     "3.10-dev" # Fails due to lack of matplotlib availability
 
 install:
   - pip install -r requirements.txt
