--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           pip-dependency-file: requirements.txt
           pkg-manager: pip
       - python/install-packages:
-          args: pytest coverage coveralls
+          args: pytest coverage coveralls pyyaml
           pkg-manager: pip
       - run:
           name: Pytest-Test
