--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -113,6 +113,6 @@ workflows:
   test-bash:
       jobs:
         - bash_prep_data
-        - bash_test:
+        - bash_sample_1_test:
             requires:
               - bash_prep_data
