Update CircleCI Config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,16 +6,16 @@ executors:
   #bash-env:
     # machine:
     #  image: ubuntu-2004:202111-02
-  py-3.8:
+  py-3-8:
     docker:
       - image: cimg/python:3.8
-  py-3.9:
+  py-3-9:
     docker:
       - image: cimg/python:3.9
-  py-3.10:
+  py-3-10:
     docker:
       - image: cimg/python:3.10
-  py-3.11:
+  py-3-11:
     docker:
       - image: cimg/python:3.11
 
@@ -132,4 +132,4 @@ workflows:
             matrix:
               parameters:
                 # os: [linux, macos]
-                py-version: ["py-3.8", "py-3.9", "py-3.10", "py-3.11"]
+                py-version: ["py-3-8", "py-3-9", "py-3-10", "py-3-11"]
