Finalize CircleCI as Stubs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -144,9 +144,10 @@ jobs:
           name: Run Test
           command: |
             export PATH=$PATH:$PWD/scripts
-            cd << parameters.example >>*
-            python3 ./analysis_python.py
-            ./analysis_shell.sh
+            echo "Stub for now"
+            #cd << parameters.example >>*
+            #python3 ./analysis_python.py
+            #./analysis_shell.sh
 
   example_test_pip:
     parameters:
@@ -171,9 +172,10 @@ jobs:
           name: Run Test
           command: |
             export PATH=$PATH:$PWD/scripts
-            cd << parameters.example >>*
-            python3 ./analysis_python.py
-            ./analysis_shell.sh
+            echo "Stub for now"
+            #cd << parameters.example >>*
+            #python3 ./analysis_python.py
+            #./analysis_shell.sh
 
 workflows:
   test-python:
