--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,16 +66,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - example_01-{{ checksum "example_01_type_mirna_analysis/download_data.sh" }}
-      - restore_cache:
-          keys:
-            - example_02-{{ checksum "example_02_target_analysis/download_data.sh" }}
-      - restore_cache:
-          keys:
-            - example_03-{{ checksum "example_03_grouped_target_analysis/download_data.sh" }}
-      - restore_cache:
-          keys:
-            - example_04-{{ checksum "example_04_fold_analysis/download_data.sh" }}
+            - all_examples-{{ checksum "example_01_type_mirna_analysis/download_data.sh" }}
       - run:
           name: Download Sample Data
           command: |
@@ -89,20 +80,11 @@ jobs:
             done
             ls example*
       - save_cache:
-          key: example_01-{{ checksum "example_01_type_mirna_analysis/download_data.sh" }}
+          key: all_examples-{{ checksum "example_01_type_mirna_analysis/download_data.sh" }}
           paths:
             - example_01_type_mirna_analysis
-      - save_cache:
-          key: example_02-{{ checksum "example_02_target_analysis/download_data.sh" }}
-          paths:
             - example_02_target_analysis
-      - save_cache:
-          key: example_03-{{ checksum "example_03_grouped_target_analysis/download_data.sh" }}
-          paths:
             - example_03_grouped_target_analysis
-      - save_cache:
-          key: example_04-{{ checksum "example_04_fold_analysis/download_data.sh" }}
-          paths:
             - example_04_fold_analysis
 
       - persist_to_workspace:
@@ -124,7 +106,7 @@ jobs:
       - checkout
       - restore_cache:
           keys:
-            - << parameters.example >>
+            - all_examples-{{ checksum "example_01_type_mirna_analysis/download_data.sh" }}
 
       - attach_workspace:
           at: ./
@@ -153,7 +135,7 @@ jobs:
     steps:
       - restore_cache:
           keys:
-            - << parameters.example >>-
+            - all_examples-{{ checksum "example_01_type_mirna_analysis/download_data.sh" }}
 
       - attach_workspace:
           at: ./
