Update ver to v0.3.4

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,7 @@ jobs:
       - run:
           name: Pytest-Test
           command: |
+            pip show pytest
             coverage run --source=. --omit="conf*",setup.py -m pytest
             coveralls
 
